// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders Alert 1`] = `
<StyledNewsComponent>
  <div>
    <HeaderH1
      text="News"
    />
  </div>
  <Alert
    centerPage={true}
    color="danger"
    textError="textError"
  />
</StyledNewsComponent>
`;

exports[`render renders Articles 1`] = `
<StyledNewsComponent>
  <div>
    <HeaderH1
      text="News"
    />
  </div>
  <Connect(ArticlesComponent) />
</StyledNewsComponent>
`;

exports[`render renders Loader 1`] = `
<StyledNewsComponent>
  <div>
    <HeaderH1
      text="News"
    />
  </div>
  <Component
    centerPage={true}
  />
</StyledNewsComponent>
`;
